chart/charts/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpenv
  namespace: httpenv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpenv
  template:
    metadata:
      labels:
        app: httpenv
    spec:
      containers:
        - name: httpenv
          image: ghcr.io/irish1986/http-micro-server:sha-7ed01a2
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 2
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthz
              port: http
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: config
              subPath: message
              mountPath: /etc/message.txt
      volumes:
        - name: config
          configMap:
            name: config
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - httpenv
              topologyKey: "kubernetes.io/hostname"
