chart/charts/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: load-balancer
  namespace: httpenv
spec:
  type: LoadBalancer
  selector:
    app: httpenv
  ports:
    - port: 8080
      targetPort: http
