chart/charts/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpenv
  namespace: httpenv
  annotations:
    # kubernetes.io/ingress.class: external-nginx
spec:
  ingressClassName: external-nginx
  rules:
    - host: httpenv.local.irishlab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpenv
                port:
                  number: 8080
